<resources>
    <!--Redesign-->
    <!--Specific Strings-->
    <!--Home-->
    <string name="titleMenu">Whiteboard</string>
    <string name="exitButtonMenu">Exit</string>
    <string name="app_name">Lovely</string>
    <!--Colors-->
    <string name="redColor">Red</string>
    <string name="orangeColor">Orange</string>
    <string name="yellowColor">Yellow</string>
    <string name="greenColor">Green</string>
    <string name="blueColor">Blue</string>
    <string name="purpleColor">Purple</string>
    <string name="blackColor">Black</string>
    <string name="whiteColor">White</string>
    <!--General Strings-->
    <string name="settingButtonText">Setting</string>
    <string name="saveButtonText">Save</string>
    <string name="loadButtonText">Load</string>
    <string name="createButtonText">Create</string>
    <string name="backButtonText">Back</string>
    <string name="optionsButtonText">Options</string>
    <string name="clearButtonBoard">Clear</string>
    <!--Board-->
    <string name="overwrite">Overwrite</string>
    <string name="filler">TODO</string>
</resources>