<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/brushButtonOption"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButtonOption"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/filler" />

    <ImageButton
        android:id="@+id/colorButtonOption"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButtonOption"
        app:srcCompat="?android:attr/textSelectHandle"
        android:contentDescription="@string/filler"/>

    <ImageButton
        android:id="@+id/galleryButtonOption"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:contentDescription="@string/filler"/>

    <Button
        android:id="@+id/loadButtonOption"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="10dp"
        android:text="@string/loadButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createButtonOption"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="275dp"
        android:layout_marginTop="10dp"
        android:text="@string/createButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="10dp"
        android:text="@string/backButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButtonOption"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/saveButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButtonOption"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="184dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send"
        android:contentDescription="@string/filler"/>
</androidx.constraintlayout.widget.ConstraintLayout>