<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aqua">

    <Button
        android:id="@+id/settingButtonMenu"
        android:layout_width="194dp"
        android:layout_height="90dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="108dp"
        android:text="@string/settingButtonText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadButtonMenu"
        tools:ignore="OnClick,UsingOnClickInXml"
        />

    <Button
        android:id="@+id/exitButtonMenu"
        android:layout_width="194dp"
        android:layout_height="90dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="108dp"
        android:background="#FFFFFF"
        android:text="@string/exitButtonMenu"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingButtonMenu" />

    <TextView
        android:id="@+id/titleMenu"
        android:layout_width="330dp"
        android:layout_height="91dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/titleMenu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/teal_700"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadButtonMenu"
        android:layout_width="194dp"
        android:layout_height="90dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="108dp"
        android:text="@string/loadButtonText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu" />
</androidx.constraintlayout.widget.ConstraintLayout>